initiated the admin and customer login page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <a href="admin.html">admin</a>
-        <a href="customer.html">customer</a>
+        <a href="admin_login.html">admin</a>
+        <a href="customer_login.html">customer</a>
     </body>
 </html>
