--- a/admin_login.html
+++ b/admin_login.html
@@ -7,9 +7,14 @@
 
     <body>
         <form>
-            Username <input type="textbox"><br>
-            Password <input type="textbox"><br>
-            <input type="button" value="submit" />
+            <fieldset>
+                <legend>Login</legend> 
+                <table>
+                <tr><td>Username</td><td><input type="text"></td></tr>
+                <tr><td>Password</td><td><input type="text"></td></tr>
+                <tr><td><input type="button" value="submit" /></td></tr>
+                </table>
+            </fieldset>  
         </form>
     </body>
 </html>
