--- a/customer_login.html
+++ b/customer_login.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Customer Login</title>
+        <title>Admin Login</title>
         <meta charset="utf-8"> 
     </head>
 
     <body>
         <form>
-            Phone Number : <input type="textbox"><br>
-            OTP <input type="textbox"><br>
-            <input type="button" value="submit" />
+            <fieldset>
+                <legend>Login</legend> 
+                <table>
+                <tr><td>Phone Number</td><td><input type="text"></td></tr>
+                <tr><td>One Time Pass</td><td><input type="text"></td></tr>
+                <tr><td><input type="button" value="submit" /></td></tr>
+                </table>
+            </fieldset>  
         </form>
     </body>
 </html>
