Submit button of admin login, customer login final

--- a/customer_login.html
+++ b/customer_login.html
@@ -12,7 +12,7 @@
                 <table>
                 <tr><td>Phone Number</td><td><input type="text"></td></tr>
                 <tr><td>One Time Pass</td><td><input type="text"></td></tr>
-                <tr><td><input type="button" value="submit" /></td></tr>
+                <tr><td><button onClick="location.href=''" type="button">Submit</button></td></tr>
                 </table>
             </fieldset>  
         </form>
