--- a/admin_login.html
+++ b/admin_login.html
@@ -12,7 +12,7 @@
                 <table>
                 <tr><td>Username</td><td><input type="text"></td></tr>
                 <tr><td>Password</td><td><input type="text"></td></tr>
-                <tr><td><input type="button" value="submit" /></td></tr>
+                <tr><td><button onClick="location.href=''" type="button">Submit</button></td></tr>
                 </table>
             </fieldset>  
         </form>
