--- a/customer_login.html
+++ b/customer_login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Admin Login</title>
+        <title>Customer Login</title>
         <meta charset="utf-8"> 
     </head>
 
