Update customer home page.

--- a/customer.html
+++ b/customer.html
@@ -2,23 +2,41 @@
     <head>
         <title>Customer</title>
     </head>
+
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color:bisque;
+            }
+
+            li {
+                float: left;
+                }
+
+            .navbar{
+                display: block;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                }
+    </style>
     
     <body>
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a class="navbar" href="">Home</a>
             </li>
             <li>
-                <a href="#">Menu</a>
+                <a class="navbar" href="">Menu</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a class="navbar" href="">Cart</a>
             </li>
             <li>
-                <a href="#">Cart</a>
-            </li>
-            <li>
-                <a href="#">Sign-Out</a>
+                <a class="navbar" href="index.html">Sign-Out</a>
             </li>
         </ul>
     </body>
