--- a/customer.html
+++ b/customer.html
@@ -27,13 +27,13 @@
     <body>
         <ul>
             <li>
-                <a class="navbar" href="">Home</a>
+                <a class="navbar" href="customer.html">Home</a>
             </li>
             <li>
-                <a class="navbar" href="">Menu</a>
+                <a class="navbar" href="customer_menu.html">Menu</a>
             </li>
             <li>
-                <a class="navbar" href="">Cart</a>
+                <a class="navbar" href="customer_cart.html">Cart</a>
             </li>
             <li>
                 <a class="navbar" href="index.html">Sign-Out</a>
