feedback form update.

--- a/customer_feedback.html
+++ b/customer_feedback.html
@@ -126,6 +126,38 @@
 			</select>
 		</div>
 
+        <div class="form-control">
+			<label>
+				How would you rate our services?
+			</label>
+
+			<label for="recommed-1">
+				<input type="radio"
+					id="recommed-1"
+					name="recommed">1</input>
+			</label>
+			<label for="recommed-2">
+				<input type="radio"
+					id="recommed-2"
+					name="recommed">2</input>
+			</label>
+			<label for="recommed-3">
+				<input type="radio"
+					id="recommed-3"
+					name="recommed">3</input>
+			</label>
+            <label for="recommed-4">
+				<input type="radio"
+					id="recommed-4"
+					name="recommed">4</input>
+			</label>
+            <label for="recommed-5">
+				<input type="radio"
+					id="recommed-5"
+					name="recommed">5</input>
+			</label>
+		</div>
+
 		<div class="form-control">
 			<label>
 				Would you recommend our restaurant
@@ -150,7 +182,7 @@
 		</div>
 
 		<div class="form-control">
-			<label>Languages and Frameworks known
+			<label>Options
 				<small>(Check all that apply)</small>
 			</label>
 
