--- a/customer_feedback.html
+++ b/customer_feedback.html
@@ -69,15 +69,15 @@
 	<h1>Feedback Form</h1>
 
 	
-	<form id="form">
+	<form id="form" method="post">
 
 		<div class="form-control">
-			<label for="name" id="label-name">
+			<label form="name" id="label-name">
 				Name
 			</label>
 
 			<input type="text"
-				id="name"
+				name="name"
 				placeholder="Enter your name" />
 		</div>
 
@@ -87,7 +87,7 @@
 			</label>
 
 			<input type="email"
-				id="email"
+				name="email"
 				placeholder="Enter your email" />
 		</div>
 
