--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,14 @@
 
         h1{
             text-align: center;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         .form-style {
         margin:10px auto;
         width: 400px;
         padding: 20px 12px 10px 20px;
-        font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+        font: 14px -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         .form-style td {
@@ -75,6 +76,7 @@
         .form-style input[type=email],
         textarea{
         box-sizing: border-box;
+        border-radius: 3px;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         border:1px solid #BEBEBE;
@@ -85,6 +87,11 @@
         -ms-transition: all 0.30s ease-in-out;
         -o-transition: all 0.30s ease-in-out;
         outline: none;  
+        }
+
+        .form-style input[type=submit], 
+        .form-style input[type=reset]{
+            border-radius: 3px;
         }
 
         .form-style .long{
@@ -213,8 +220,10 @@
             <tr>
                <td></td>
                <td>
-                  <input type="submit" value="Send">      
-                  <input type="reset" value="Reset"> 
+                    <center>
+                    <input type="submit" value="Send">      
+                    <input type="reset" value="Reset"> 
+                    </center>
                </td>
             </tr>
          </table>
