--- a/customer.html
+++ b/customer.html
@@ -9,7 +9,6 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color:bisque;
             }
 
         li {
@@ -22,9 +21,17 @@
             padding: 14px 16px;
             text-decoration: none;
             }
+        body{
+            background-image: url('customer_home_image.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
     </style>
     
     <body>
+        <center>
         <ul>
             <li>
                 <a class="navbar" href="customer.html">Home</a>
@@ -39,5 +46,6 @@
                 <a class="navbar" href="index.html">Sign-Out</a>
             </li>
         </ul>
+    </center>
     </body>
 </html>
