--- a/customer_cart.html
+++ b/customer_cart.html
@@ -22,6 +22,14 @@
                 padding: 14px 16px;
                 text-decoration: none;
                 }
+            
+            body{
+            background-image: url('bg3.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
     </style>
     
     <body>
