--- a/customer_menu.html
+++ b/customer_menu.html
@@ -39,6 +39,13 @@
             .menu{
                 align-items: center;
             }
+            body{
+            background-image: url('bg3.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
     </style>
     
     <body>
