--- a/admin_login.html
+++ b/admin_login.html
@@ -5,6 +5,16 @@
         <meta charset="utf-8"> 
     </head>
 
+    <style>
+                    body{
+            background-image: url('bg1.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
+
     <body>
         <form>
             <fieldset>
