--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         fieldset{
             border-radius: 10px;
         }
+
+        body{
+            background-image: url('bg2.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
         </style>
 
     <body>
