--- a/customer_login.html
+++ b/customer_login.html
@@ -16,7 +16,7 @@
     </style>
 
     <body>
-        <form>
+        <form name="myForm">
             <fieldset>
                 <legend>Login</legend> 
                 <table>
@@ -30,17 +30,16 @@
 
     <script>
         function validateForm(){ 
-    var phone = document.forms["myForm"]["phone"];               
-    var otp = document.forms["myForm"]["otp"];
-    var ph = phone.value
-    var correct_otp = ph.substring(6,11);
+            var phone = document.forms["myForm"]["phone"];               
+            var otp = document.forms["myForm"]["otp"];
+            var correct_otp = phone.value.substring(6,11);
 
-    if (phone.value != correct_otp)                                  
-    { 
-        alert ("Incorrect OTP");  
-    }else{
-        window.location.href = "customer.html";  
-    }
+            if (Number(phone.value) != Number(correct_otp.toString()))                                  
+            { 
+                alert ("Incorrect OTP");  
+            }else{
+                window.location.href = "customer.html";  
+            }
     
 }
     </script>
