--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </ul>
 
 
-        <h1>Contact form</h1>
+        <h1>Contact Us</h1>
       <form name="myForm" action="" onsubmit="return validateForm()" method="post">
          <table class="form-style">
             <tr>
