made new connecting page customer_cuisine.html

--- a/customer.html
+++ b/customer.html
@@ -43,7 +43,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="customer_menu.html">
+                  <a href="customer_cuisine.html">
                     Menu
                   </a>
                 </li>
