Updates to contact us page

--- a/contact.html
+++ b/contact.html
@@ -2,25 +2,55 @@
 <html>
     <head>
         <title>Contact Us</title>
+        <link rel="stylesheet" type="text/css" href="navbar.css" />
+        <link rel="stylesheet" type="text/css" href="footer.css" />
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+       <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" type="text/css" href="contact_styles.css" />
         <script type="text/javascript" src="contact_script.js"></script>
     </head>
 
     <body>
-        <ul>
-            <li>
-                <a class="navbar" href="customer.html">Home</a>
-            </li>
-            <li>
-                <a class="navbar" href="customer_menu.html">Menu</a>
-            </li>
-            <li>
-                <a class="navbar" href="customer_cart.html">Cart</a>
-            </li>
-            <li>
-                <a class="navbar" href="index.html">Sign-Out</a>
-            </li>
-        </ul>
+      <div class="first-screen">
+         <nav class="menu-container">
+             <input type="checkbox" aria-label="Toggle menu" />
+             <span></span>
+             <span></span>
+             <span></span>
+           
+             <a href="#" class="menu-logo">
+               <img src="image-removebg-preview.png" alt="My Awesome Website"/>
+             </a>
+           
+             <div class="menu">
+               <ul>
+                 <li>
+                   <a href="customer.html">
+                     Home
+                   </a>
+                 </li>
+                 <li>
+                   <a href="customer_cuisine.html">
+                     Menu
+                   </a>
+                 </li>
+                 <li>
+                   <a href="customer_cart.html">
+                     Cart
+                   </a>
+                 </li>
+               </ul>
+               <ul>
+                 <li>
+                   <a href="index.html">
+                     Sign Out
+                   </a>
+                 </li>
+               </ul>
+             </div>
+           </nav>
+         </div>
 
 
         <h1>Contact Us</h1>
