--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             margin: auto; 
             margin-top: 25vh;
             width: 320px; height: 320px;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            font-weight: bold;
         }
 
         fieldset{
@@ -38,6 +40,12 @@
             background-attachment: fixed;
             background-position: center;
             background-size: cover;
+            font-size: 25px;
+        }
+        button{
+            font-size: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            font-weight: bold;
         }
         </style>
 
