bg attachment to scroll, login changes validation

--- a/customer.html
+++ b/customer.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="navbar.css" />
         <link rel="stylesheet" type="text/css" href="footer.css" />
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-       <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="style.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
         .first-screen{
             background-image: url('customer_home_image.png');
             background-repeat: no-repeat;
-            background-attachment: fixed;
+            background-attachment: scroll;
             background-position: center;
             background-size: cover;
             height: 100%;
