--- a/index.html
+++ b/index.html
@@ -42,11 +42,63 @@
             background-size: cover;
             font-size: 25px;
         }
-        button{
-            font-size: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            font-weight: bold;
-        }
+        .button-56 {
+  align-items: center;
+  background-color: #fee6e3;
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
+}
         </style>
 
     <body>
@@ -54,7 +106,8 @@
             <fieldset>
                 <legend>Login</legend> 
                 <table>
-                <tr><td><button onClick="location.href='admin_login.html'" type="button">Admin</button></td><td><button onClick="location.href='customer_login.html'" type="button">Customer</button></td></tr>
+                <tr><td><button onClick="location.href='admin_login.html'" type="button" class="button-56" role="button">Admin</button></td>
+                    <td><button onClick="location.href='customer_login.html'" type="button" class="button-56" role="button">Customer</button></td></tr>
                 <tr></tr>
                 </table>
             </fieldset>
