changed image location and icon positions

--- a/customer_cart.html
+++ b/customer_cart.html
@@ -7,7 +7,7 @@
     <style>
     
             body{
-            background-image: url('bg3.png');
+            background-image: url('images/bg3.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
