--- a/customer_cuisine.html
+++ b/customer_cuisine.html
@@ -25,11 +25,11 @@
 
     <body>
         <div class="parent">
-            <a href="customer_menu.html" ><img class="image1" src="cuisine1.png" /></a>
+            <a href="customer_menu.html" ><img class="image1" src="images/cuisine1.png" /></a>
             
-            <a href="customer_menu.html" ><img class="image3" src="cuisine3.png" /></a>
+            <a href="customer_menu.html" ><img class="image3" src="images/cuisine3.png" /></a>
 
-            <a href="customer_menu.html" ><img class="image2" src="cuisine2.png" /></a>
+            <a href="customer_menu.html" ><img class="image2" src="images/cuisine2.png" /></a>
           </div>
     </body>
 </html>
