--- a/customer_menu.html
+++ b/customer_menu.html
@@ -23,7 +23,7 @@
                 align-items: center;
             }
             body{
-            background-image: url('bg3.png');
+            background-image: url('images/bg3.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
