--- a/customer.html
+++ b/customer.html
@@ -13,7 +13,7 @@
 
     <style>
         .first-screen{
-            background-image: url('customer_home_image.png');
+            background-image: url('images/customer_home_image.png');
             background-repeat: no-repeat;
             background-attachment: scroll;
             background-position: center;
@@ -32,7 +32,7 @@
             <span></span>
           
             <a href="#" class="menu-logo">
-              <img src="image-removebg-preview.png" alt="My Awesome Website"/>
+              <img src="images/image-removebg-preview.png" alt="My Awesome Website"/>
             </a>
           
             <div class="menu">
