--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         body{
-            background-image: url('bg2.png');
+            background-image: url('images/bg2.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
