changes to cuisine page and other img file changes

--- a/customer_menu.html
+++ b/customer_menu.html
@@ -39,7 +39,7 @@
             <span></span>
           
             <a href="#" class="menu-logo">
-              <img src="image-removebg-preview.png" alt="My Awesome Website"/>
+              <img src="images/image-removebg-preview.png" alt="My Awesome Website"/>
             </a>
           
             <div class="menu">
