--- a/customer_cuisine.html
+++ b/customer_cuisine.html
@@ -5,6 +5,10 @@
     </head>
 
     <style>
+        body{
+            background-color: black;
+        }
+
         .parent {
         position: relative;
         top: 0;
@@ -18,7 +22,9 @@
         position: relative;
         top: 0;
         left: 0;
+        width: 100vw;
         max-height: 33vh;
+        max-width: 100vw;
         }
 
     </style>
