--- a/customer_menu.html
+++ b/customer_menu.html
@@ -2,105 +2,10 @@
     <head>
         <title>Customer</title>
         <link rel="stylesheet" type="text/css" href="navbar.css" />
+        <link rel="stylesheet" type="text/css" href="customer_menu.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
-    <style>
-            .text-center{
-                text-align: center;
-
-            }
-            .foodchoice{
-                padding: 1%;
-                margin: 2px;
-            }
-            table{
-                text-align: center;
-                width: 100% ;
-                border-collapse: collapse;
-                margin: 2px;
-            }
-            .menu{
-                align-items: center;
-            }
-            body{
-            background-image: url('images/bg3.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-            background-size: cover;
-        }
-
-        .item-card{
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            width: 250px;
-            background: white;
-            padding: 25px 40px;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%,-50%);
-            text-transform: uppercase;
-            border-radius: 20px;
-            }
-        .item-card h1{
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            font-size: 22px;
-            margin-bottom: -8px;
-            text-align: center;
-            margin-top: -5px;
-            }
-        .item-card p{
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            font-weight: bold;
-            font-size: 13px;
-            color: grey;
-            text-align: center;
-            }
-        .item-pic{
-            background-image: url(1.png);
-            width: 100%;
-            height: 200px;
-            background-size: cover;
-            background-position: center;
-            transition: .6s linear;
-            margin-bottom: 15px;
-        }
-
-        .item-picture{
-            border-radius: 15px;
-            height: 100%;
-            width: 100%;
-            object-fit: fill;
-        }
-
-        .item-info{
-            display: flex;
-            align-items: center;
-            }
-        .item-price{
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            color: black;
-            font-size: 20px;
-            font-weight: bold;
-            }
-        .item-button{
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            margin-left: auto;
-            color: black;
-            text-decoration: none;
-            border: 3px solid;
-            padding: 8px 24px;
-            border-radius: 20px;
-            transition: .4s linear;
-            font-weight: bold;
-            }
-
-        .item-button:hover{
-            transform: scale(1.06);
-            }
-
-    </style>
-    
     <body>
         <nav class="menu-container">
             <input type="checkbox" aria-label="Toggle menu" />
@@ -147,21 +52,99 @@
             Non-Veg<input type="radio" name="food_choice">
         </div>
 
-
+        <div class="flex">
         <div class="item-card">
-            <h1>Borgier</h1>
+            <h1>Rigatoni alla Carbonara</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://www.thespruceeats.com/thmb/Q91g4m7nZMTnaXcP5tiNbEgSYCk=/940x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/indian-style-burger-1957599-hero-01-266103a4bb4e4ee7b5feb4da2d2e99da.jpg"/></center>
+                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211140233-03-classic-italian-dishes.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
             </div>
             <div class="item-info">
-              <div class="item-price">$90</div>
-              <a href="" class="item-button">Add to Cart</a>
+              <div class="item-price">$190</div>
+              <a href="" class="item-button fa fa-shopping-cart"></a>
             </div>
         </div>
+
+        <div class="item-card">
+            <h1>Trofie al <br>Pesto</h1>
+            <p>Chef's Special</p>
+            <div class="item-pic">
+                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211140254-04-classic-italian-dishes.jpg"/></center>
+            </div>
+            <div class="item-colors">
+              <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
+            </div>
+            <div class="item-info">
+              <div class="item-price">$120</div>
+              <a href="" class="item-button fa fa-shopping-cart"></a>
+            </div>
+        </div>
+
+        <div class="item-card">
+            <h1>Lasagne al <br>Forno</h1>
+            <p>Chef's Special</p>
+            <div class="item-pic">
+                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141204-05-classic-italian-dishes.jpg"/></center>
+            </div>
+            <div class="item-colors">
+              <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
+            </div>
+            <div class="item-info">
+              <div class="item-price">$100</div>
+              <a href="" class="item-button fa fa-shopping-cart"></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="flex">
+        <div class="item-card">
+            <h1>Brodetto di <br>Ascoli</h1>
+            <p>Chef's Special</p>
+            <div class="item-pic">
+                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141225-06-classic-italian-dishes.jpg"/></center>
+            </div>
+            <div class="item-colors">
+              <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
+            </div>
+            <div class="item-info">
+              <div class="item-price">$110</div>
+              <a href="" class="item-button fa fa-shopping-cart"></a>
+            </div>
+        </div>
+
+        <div class="item-card">
+            <h1>Baccalà alla <br>Vicentina</h1>
+            <p>Chef's Special</p>
+            <div class="item-pic">
+                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141537-09-classic-italian-dishes.jpg"/></center>
+            </div>
+            <div class="item-colors">
+              <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
+            </div>
+            <div class="item-info">
+              <div class="item-price">$230</div>
+              <a href="" class="item-button fa fa-shopping-cart"></a>
+            </div>
+        </div>
+
+        <div class="item-card">
+            <h1>Polenta con <br>Cavoli</h1>
+            <p>Chef's Special</p>
+            <div class="item-pic">
+                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141552-10-classic-italian-dishes.jpg"/></center>
+            </div>
+            <div class="item-colors">
+              <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
+            </div>
+            <div class="item-info">
+              <div class="item-price">$140</div>
+              <a href="" class="item-button fa fa-shopping-cart"></a>
+            </div>
+        </div>
+    </div>
 
     </body>
 
