changed fonts and other styles

--- a/customer_menu.html
+++ b/customer_menu.html
@@ -44,9 +44,9 @@
               </ul>
             </div>
           </nav>
-        <h2 class="text-center">
+        <h1 class="text-center menu-title">
             Menu
-        </h2>
+        </h1>
         <div class="text-center foodchoice">
             Veg<input type="radio" name="food_choice">
             Non-Veg<input type="radio" name="food_choice">
