--- a/customer_menu-dessert.html
+++ b/customer_menu-dessert.html
@@ -2,7 +2,7 @@
     <head>
         <title>Customer</title>
         <link rel="stylesheet" type="text/css" href="navbar.css" />
-        <link rel="stylesheet" type="text/css" href="customer_menu.css" />
+        <link rel="stylesheet" type="text/css" href="customer_menu-dessert.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
@@ -45,7 +45,7 @@
             </div>
           </nav>
         <h1 class="text-center menu-title">
-            Menu
+            Desserts
         </h1>
 
         <div class="food-pref">
@@ -66,40 +66,40 @@
 
         <div class="flex">
         <div class="item-card">
-            <h1>Rigatoni alla Carbonara</h1>
+            <h1>Tiramisu</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211140233-03-classic-italian-dishes.jpg"/></center>
+                <center><img class="item-picture" src="https://www.allrecipes.com/thmb/qWCvuTxiT_x4dk4mMQw6YY-aeEc=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21412-tiramisu-ii-3x2-119-dc2ec77a0d39410195161a3ff98ca000.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
             </div>
             <div class="item-info">
-              <div class="item-price">$190</div>
+              <div class="item-price">$90</div>
               <a href="" class="item-button fa fa-shopping-cart"></a>
             </div>
         </div>
 
         <div class="item-card">
-            <h1>Trofie al <br>Pesto</h1>
+            <h1>Biscotti</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211140254-04-classic-italian-dishes.jpg"/></center>
+                <center><img class="item-picture" src="https://www.allrecipes.com/thmb/Qfpoet9We4KPduroSdOXlyC1QNU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4296781-9d5cb2a4a8ce44a28b8749544c2992ca.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
             </div>
             <div class="item-info">
-              <div class="item-price">$120</div>
+              <div class="item-price">$70</div>
               <a href="" class="item-button fa fa-shopping-cart"></a>
             </div>
         </div>
 
         <div class="item-card">
-            <h1>Lasagne al <br>Forno</h1>
+            <h1>Cannoli</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141204-05-classic-italian-dishes.jpg"/></center>
+                <center><img class="item-picture" src="https://www.allrecipes.com/thmb/L17EIbNqhp-saxJrwhnivCgHA9A=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/865595-0c435d944e5d4817a9797e3def643282.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
@@ -113,46 +113,46 @@
 
     <div class="flex">
         <div class="item-card">
-            <h1>Brodetto di <br>Ascoli</h1>
+            <h1>Pizzelle</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141225-06-classic-italian-dishes.jpg"/></center>
+                <center><img class="item-picture" src="https://www.allrecipes.com/thmb/wTBdC2qR9RbolUm58iHscjijFXo=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/616683-pizzelles-iii-ThatStephanie-1x1-1-2f7ef202c01d49b4aa6cefd0e87968c4.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
             </div>
             <div class="item-info">
-              <div class="item-price">$110</div>
+              <div class="item-price">$80</div>
               <a href="" class="item-button fa fa-shopping-cart"></a>
             </div>
         </div>
 
         <div class="item-card">
-            <h1>Baccalà alla <br>Vicentina</h1>
+            <h1>Sfogliatelle Ricce</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141537-09-classic-italian-dishes.jpg"/></center>
+                <center><img class="item-picture" src="https://www.allrecipes.com/thmb/JYUyZcv9bjYxW5exFnEEmmJKB94=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1099479-sfogliatelle-ricce-SugarMogill-4x3-1-c80a22b122504bfd8ab710e3c97b0dd0.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
             </div>
             <div class="item-info">
-              <div class="item-price">$230</div>
+              <div class="item-price">$60</div>
               <a href="" class="item-button fa fa-shopping-cart"></a>
             </div>
         </div>
 
         <div class="item-card">
-            <h1>Polenta con <br>Cavoli</h1>
+            <h1>Sfingi</h1>
             <p>Chef's Special</p>
             <div class="item-pic">
-                <center><img class="item-picture" src="https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210211141552-10-classic-italian-dishes.jpg"/></center>
+                <center><img class="item-picture" src="https://www.allrecipes.com/thmb/r-F3zEgagEExOIzGNXTkpeSGamk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9180788-53f07f94d576488c9ad16b15ca9843e5.jpg"/></center>
             </div>
             <div class="item-colors">
               <span class="" data-color="#7ed6df" data-pic="url(1.png)"></span>
             </div>
             <div class="item-info">
-              <div class="item-price">$140</div>
+              <div class="item-price">$80</div>
               <a href="" class="item-button fa fa-shopping-cart"></a>
             </div>
         </div>
