adjusting the animation timings

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
             waitBetweenWords: 500,
         });
 
-        const intro_text = [' ',' ',' ',' ','Welcome to our project','We hope you like it'];
+        const intro_text = [' ','Welcome to our project','We hope you like it'];
         const intro_typing = new AutoTyping('.intro_text', intro_text, {
             typeSpeed: 80,
             deleteSpeed: 80,
-            waitBeforeDelete: 500,
+            waitBeforeDelete: 1500,
             waitBetweenWords: 500,
         });
         
