--- a/customer_login.html
+++ b/customer_login.html
@@ -10,7 +10,7 @@
 	}
 	body {
 		font-family: "Lato", sans-serif;
-		background: #ff816e;
+		background: rgba(255, 154, 114, 1);
 		display: flex;
 		align-items: center;
 		flex-direction: column;
