--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
         .button-56 {
           align-items: center;
-          background-color: #fee6e3;
+          background-color: #ffc8fd;
           border: 2px solid #111;
           border-radius: 8px;
           box-sizing: border-box;
