--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
 
         body{
-            background-color: rgb(115, 206, 248);
+            background-color: rgba(115, 206, 248, 1);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
