--- a/customer_login.html
+++ b/customer_login.html
@@ -10,13 +10,13 @@
 	}
 	body {
 		font-family: "Lato", sans-serif;
-		background: rgba(255, 154, 114, 1);
+		background: rgb(14, 168, 236);
 		display: flex;
 		align-items: center;
 		flex-direction: column;
 		align-content: center;
 		justify-content: center;
-		color: white;
+		color: black;
 	}
 	.container {
 		width: 400px;
@@ -40,10 +40,10 @@
 		z-index: -1;
 		background: transparent;
 		transform: translateX(-3.5rem) translateY(-3.75rem);
-		border: 6px solid #0e39fe;
+		border: 6px solid #88498f;
 	}
 	form::after {
-		background: #0ea8ec;
+		background: rgb(255, 200, 253);
 		z-index: -2;
 		transform: translateX(-2rem) translateY(-2.25rem);
 	}
@@ -60,7 +60,7 @@
 		font-size: 14px;
 	}
 	form:focus-within {
-		background: #0ea8ec;
+		background: rgba(255, 200, 253, 1);
 	}
 	form:focus-within::before {
 		width: 0%;
@@ -81,11 +81,11 @@
 	}
 	form input {
 		padding: 10px 20px;
-		border: 4px solid white;
+		border: 4px solid black;
 		margin: 0 1.5rem;
 		background-color: transparent !important;
 		-webkit-appearance: none;
-		color: white;
+		color: black;
 	}
 	form input:-webkit-autofill {
 		background-color: transparent !important;
@@ -93,13 +93,13 @@
 		-webkit-text-fill-color: white !important;
 	}
 	form input::placeholder {
-		color: white;
+		color: black;
 	}
 	form input:focus {
-		color: #0e39fe;
+		color: #88498f;
 		font-weight: bold;
 		outline: 0;
-		border: 6px solid #0e39fe;
+		border: 6px solid #88498f;
 	}
 	form input::-webkit-input-placeholder {
 		opacity: 1;
@@ -112,7 +112,7 @@
 		border: none;
 		padding: 0.85rem 1rem;
 		margin-top: 2rem;
-		background-color: #0e39fe;
+		background-color: #88498f;
 		color: white;
 		font-size: 0.75rem;
 		text-transform: uppercase;
@@ -122,9 +122,10 @@
 		right: 18%;
 		letter-spacing: 0.15em;
 		transition: all 0.3s ease;
+		font-weight: bold;
 	}
 	form button:hover {
-		border: 6px solid #090c9b;
+		border: 6px solid ;
 	}
 	form p {
 		font-size: 0.75rem;
